navigation button mobile fix

--- a/css/header.css
+++ b/css/header.css
@@ -12,10 +12,24 @@ header {
     padding: 0 16px;
 }
 
-.navigation__wrapper {
-    display: block;
+.navigation--mobile-off {
+    display: none;
 }
 
+.navigation__wrapper {
+    height: 56px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+
+.navigation__button {
+    width: 21px;
+    height: 23px;
+    margin-left: auto;
+    margin-right: 20px;
+}
 
 .navigation {
     position: relative;
@@ -46,20 +60,6 @@ header {
     height: 22px;
 }
 
-.mobile-wrapper {
-    height: 56px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-.navigation__button {
-    position: absolute;
-    width: 21px;
-    height: 23px;
-    right: 18px;
-    top: 35%;
-}
 
 .header__gallery {
     width: 320px;
@@ -90,13 +90,13 @@ header {
         display: block;
     }
 
-    .navigation__list{
+    .navigation__list {
         height: 56px;
         display: flex;
         align-items: center;
     }
 
-    .navigation__item{
+    .navigation__item {
         padding: 0;
     }
 
@@ -136,6 +136,7 @@ header {
 }
 
 @media (min-width: 1024px) /* Desktop */ {
+
 
     .navigation__item:first-child {
         margin-right: auto;
